--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,7 @@
   },
   "homepage": "https://github.com/algopainter/ms-nftlist#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "web3": "^1.3.4"
+    "dotenv": "^10.0.0",
+    "mongoose": "^5.12.12"
   }
 }
