--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "netlify functions:serve --functions ./src/functions"
+    "dev": "netlify functions:serve --functions ./src/functions"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/algopainter/ms-nftlist#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "mongo-querystring": "^4.1.1",
     "mongoose": "^5.12.12"
   },
   "devDependencies": {
